# backtest

./: .gitignore  AGENTS.md  CHANGELOG.md  LIMITATIONS.md  README.md  api.yaml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: index.md
docs/book-guide/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: accounts.md  configuration.md  data-feed.md  execution-semantics.md  market-impact.md  orders.md  profiles.md  rebalancing.md  results.md  risk-management.md  stateful-strategies.md  strategies.md
src/ml4t/backtest/: AGENTS.md  __init__.py  _validation_imports.py  artifact_spec.py  broker.py  config.py  datafeed.py  engine.py  export.py  feed_spec.py  models.py  profiles.py  result.py  spec_bridge.py  spec_io.py  strategy.py  types.py
src/ml4t/backtest/_validation/: __init__.py  backtrader_runner.py  lean_runner.py  vectorbt_runner.py  zipline_runner.py
src/ml4t/backtest/accounting/: AGENTS.md  policy.py
src/ml4t/backtest/analytics/: AGENTS.md  annualization.py  bridge.py  equity.py
src/ml4t/backtest/core/: AGENTS.md  execution_engine.py  fill_engine.py  order_book.py  portfolio_ledger.py  shared.py
src/ml4t/backtest/execution/: AGENTS.md  __init__.py  fill_executor.py  rebalancer.py  schedule.py
src/ml4t/backtest/risk/: AGENTS.md
src/ml4t/backtest/risk/portfolio/: AGENTS.md  limits.py  manager.py
src/ml4t/backtest/risk/position/: AGENTS.md
src/ml4t/backtest/strategies/: AGENTS.md  templates.py
tests/: test_analysis.py  test_artifact_spec.py  test_broker.py  test_config_wiring.py  test_core.py  test_datafeed_memory.py  test_equity_curve.py  test_export.py  test_order_type_matrix.py  test_order_type_moc.py  test_result.py  test_strategy_templates.py  test_trade_cost_decomposition.py
tests/accounting/: test_margin_account_policy.py
tests/benchmark/: test_backtrader_zipline_runners.py  test_hotpath_benchmarks.py  test_lean_adapter.py
tests/contracts/: test_execution_contracts.py  test_profile_parity_basics.py  test_public_api_surface.py
tests/execution/: test_rebalancer.py  test_rebalancer_futures.py  test_schedule.py
tests/futures/: test_trade_record.py
tests/helpers/: invariants.py
tests/property/: test_accounting_invariants.py  test_pnl_invariants.py
tests/risk/: test_portfolio_limits.py  test_portfolio_manager.py
validation/: METHODOLOGY.md  README.md  benchmark_suite.py
validation/lean/: README.md
